@@ -83,6 +83,8 @@ public final class Messages extends NLS {
   public static String PreferencePage_IgnoreContainStringToolTip; // NO_UCD
   public static String PreferencePage_IgnoreBeanMethods; // NO_UCD
   public static String PreferencePage_IgnoreBeanMethodsToolTip;// NO_UCD
+  public static String PreferencePage_IgnoreDeprecated; // NO_UCD
+  public static String PreferencePage_IgnoreDeprecatedToolTip; // NO_UCD
   //
   public static String PreferencePage_Classes; // NO_UCD
   public static String PreferencePage_Methods; // NO_UCD
