@@ -49,6 +49,8 @@ PreferencePage_IgnoreContainString=Classes containing string
 PreferencePage_IgnoreContainStringToolTip=Classes containing one of these strings, will be ignored during detection - useful for generated code
 PreferencePage_IgnoreBeanMethods=&Ignore bean methods
 PreferencePage_IgnoreBeanMethodsToolTip=Ignore java bean methods: public Object getX(); public void setX(Object o); public boolean isX();
+PreferencePage_IgnoreDeprecated=Ignore &deprecated code
+PreferencePage_IgnoreDeprecatedToolTip=Ignore code with @deprecated in javadoc or annotated with @Deprecated
 #
 PreferencePage_ComboToolTip=How to show detected code
 #
